Edit Calendar Image Relates #41

--- a/tasks/tasks.css
+++ b/tasks/tasks.css
@@ -62,6 +62,7 @@ header {
     margin-top: 20px;
     box-shadow: 2px 2px 6px 0px #c0c0c0;
     color: #e2e2e2;
+    line-height: 50px;
 }
 
 .main-text {
